tests/parser-test-files/bad-files/define-type.6.error
error: Malformed type definition
  --> test:4:14
   |
 4 |  (define-type ((T) :a))
   |                ^^^ expected symbol
help: remove parentheses
 4 | (define-type (T) :a)
   |              ------
